test/typecheck/pass/syn_kind_infer.sail
default Order dec

$include <prelude.sail>

type xlen = 32
