test/typecheck/fail/enum_functions_partial.sail
default Order dec
$include <prelude.sail>

$[enum_number_conversions { to_enum = bar }]
enum Foo = A | B | C
